--- a/frontend/src/Components/ProductDisplay/ProductDisplay.css
+++ b/frontend/src/Components/ProductDisplay/ProductDisplay.css
@@ -131,7 +131,7 @@
   border-color: #E53935;
 }
 
-button {
+.productdisplay-right button {
   padding: 12px 20px;
   background-color: #E53935;
   color: white;
@@ -143,7 +143,7 @@ button {
   margin-bottom: 20px;
 }
 
-button:hover {
+.productdisplay-right button:hover {
   background-color: #D32F2F;
 }
 
